Partial_14Dec2021/force-app/main/default/objects/CallDetails_old__c/CallDetails_old__c.object-meta.xml
<CustomObject>
    <description>Ameyo stores the call related detail in it</description>
    <label>CallDetail_old</label>
    <nameField>
        <label>CallDetails ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CallDetails_old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>