Partial_14Dec2021/force-app/main/default/objects/CallDetails_old__c/fields/agentID__c.field-meta.xml
<CustomField>
    <fullName>agentID__c</fullName>
    <label>agentID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>