Partial_14Dec2021/force-app/main/default/objects/CallDetails_old__c/fields/lead__c.field-meta.xml
<CustomField>
    <fullName>lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>CallDetails</relationshipName>
    <type>Lookup</type>
</CustomField>