Partial_14Dec2021/force-app/main/default/objects/CallDetails_old__c/fields/recordingFileUrl__c.field-meta.xml
<CustomField>
    <fullName>recordingFileUrl__c</fullName>
    <label>Recording File Url</label>
    <type>Url</type>
</CustomField>