Partial_14Dec2021/force-app/main/default/objects/CallDetails_old__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>accountName__c</columns>
    <columns>callId__c</columns>
    <columns>campaignId__c</columns>
    <columns>customerCRTId__c</columns>
    <columns>dialedNumber__c</columns>
    <columns>dispositionClass__c</columns>
    <columns>dispositionCode__c</columns>
    <columns>systemDisposition__c</columns>
    <columns>userId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>objectId__c</columns>
    <columns>objectType__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agentID__c</field>
        <operation>equals</operation>
        <value>EX3</value>
    </filters>
    <label>Vinita</label>
</ListView>